--- a/references.bib
+++ b/references.bib
@@ -324,3 +324,13 @@
   year = {2019},
   doi = {10.21105/joss.01686}
 }
+
+@article{SparksNYCisnAmerica2019,
+  entrysubtype = {newspaper},
+  title = {{{NYC}} Isn't {{America}}'s Best Place to Live -- and It's Not Even Close},
+  author = {Sparks, Hannah},
+  date = {2019-04-10},
+  url = {https://nypost.com/2019/04/10/nyc-isnt-one-of-americas-best-places-to-live-and-its-not-even-close/},
+  urldate = {2024-04-28},
+  langid = {english}
+}
